--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "apollo-server-express": "^3.6.2",
     "bcrypt": "^5.0.0",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "graphql": "^16.3.0",
     "mongoose": "^6.2.0"
   },
